--- a/index.html
+++ b/index.html
@@ -122,13 +122,18 @@
 
         <div class="publication">
 	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>)</div>	
-            <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
+
+            <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
             <ul>
               <li>
                 <span class="paperTitle">An Imitation Game for Learning Semantic Parsers from User Interaction</span> <br />
                 <span class="paperAuthor">Ziyu Yao, Yiqi Tang, Wen-tau Yih, Huan Sun, Yu Su. <i>arXiv preprint arXiv:2005.00689</i></span>
 		<span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>]</span>
-                </li>
+              </li>
+	    </ul>
+
+            <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
+            <ul>
               <li>
                 <span class="paperTitle">Logical Natural Language Generation from Open-Domain Tables</span> <br />
                 <span class="paperAuthor">Wenhu Chen, Jianshu Chen, Yu Su, Zhiyu Chen and William Yang Wang. To appear in the Annual Conference of the Association for Computational Linguistics, 2020 (<b>ACL’20</b>)</span>
