--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>05/2020: Serve as Area Chair (Conversational Bot/QA) at NLPCC'20. Serve in the Program Committee of ACL'20, KDD'20, EMNLP'20, AKBC'20.</li>
             <li>04/2020: Long paper on logical natural language generation accepted to ACL 2020</li>
             <li>03/2020: Thank you, Fujitsu Laboratories of America, for supporting our research!</li>
             <li>01/2020: Started as Assistant Professor of Computer Science and Engineering at the Ohio State University</li>
@@ -121,7 +122,7 @@
         <div class="divider"></div>
 
         <div class="publication">
-	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>)</div>	
+	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>) (<a href="https://www.semanticscholar.org/author/Yu-Su/1758652">Semantic Scholar</a>)</div>	
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
             <ul>
@@ -319,7 +320,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <div class="divider"></div>
         <ul>
 	    <li><b>Organizer/Co-chair</b>: KBCOM'18 (co-located with WSDM'18), <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20), NLPCC'20 Area Chair (Conversational Bot/QA Track)</li>
-	    <li><b>Program Committee Member</b>: KDD'20, ACL'20, AKBC'20, KDD'19, NAACL'19, AAAI'19, AKBC'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17</li>
+	    <li><b>Program Committee Member</b>: KDD'20, ACL'20, EMNLP'20, AKBC'20, KDD'19, NAACL'19, AAAI'19, AKBC'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17</li>
         <li><b>Reviewer</b>: IEEE TNNLS, IEEE TKDE </li>
         </ul>
     </div>
