--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
             <ul>
               <li>
                 <span class="paperTitle">An Imitation Game for Learning Semantic Parsers from User Interaction</span> <br />
-                <span class="paperAuthor">Ziyu Yao, Yiqi Tang, Wen-tau Yih, Huan Sun, and Yu Su.<i>arXiv preprint arXiv:2005.00689</i></span>
+                <span class="paperAuthor">Ziyu Yao, Yiqi Tang, Wen-tau Yih, Huan Sun, and Yu Su. <i>arXiv preprint arXiv:2005.00689</i></span>
 		<span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>]</span>
               </li>
               <li>
                 <span class="paperTitle">Document Classification for COVID-19 Literature</span> <br />
-                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Juncheng Zeng, Dongdong Zhang, Ping Zhang, and Yu Su <i>arXiv preprint arXiv:2006.13816. Presented at the <a href="https://www.nlpcovid19workshop.org/">NLP-COVID Workshop</a> at ACL'20</i>,</span>
+                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Juncheng Zeng, Dongdong Zhang, Ping Zhang, and Yu Su. <i>arXiv preprint arXiv:2006.13816. Presented at the <a href="https://www.nlpcovid19workshop.org/">NLP-COVID Workshop</a> at ACL'20</i>,</span>
 		<span class="paperResource"> [<a href="https://arxiv.org/abs/2006.13816">paper</a>]</span>
               </li>
 	    </ul>
