--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -36,9 +36,9 @@ Paper-driven discussion of cutting-edge topics in natural language processing wi
 <h3 property="dc:title" datatype="" style="color: #990000"><strong>Textbooks</strong></h3>
 No required textbook. Recommended books for reading: 
 <ul>
-<li>Introduction to Natural Language Processing, 1st edition, Jacob Eisenstein. <a href="https://mitpress.mit.edu/books/introduction-natural-language-processing">Official version</a>, <a href="http://hanj.cs.illinois.edu/bk3/">Online version</a></li>
+<li>Introduction to Natural Language Processing, 1st edition, Jacob Eisenstein. <a href="https://mitpress.mit.edu/books/introduction-natural-language-processing">Official version</a>, <a href="https://github.com/jacobeisenstein/gt-nlp-class/blob/master/notes/eisenstein-nlp-notes.pdf">online version</a></li>
 <li>Speech and Language Processing, 2nd or 3rd edition, Dan Jurafsky and James H. Martin. <a href="https://www.amazon.com/Speech-Language-Processing-Daniel-Jurafsky/dp/0131873210">2nd edition</a>, <a href="https://web.stanford.edu/~jurafsky/slp3/">3rd edition (draft)</a> </li>
-<li>Deep Learning, 1st edition, Ian Goodfellow and Yoshua Bengio and Aaron Courville. <a href="https://www.amazon.com/Deep-Learning-Adaptive-Computation-Machine/dp/0262035618/ref=sr_1_1?ie=UTF8&qid=1472485235&sr=8-1&keywords=deep+learning+book">Official version</a>, <a href="https://www.deeplearningbook.org/">Online version</a></li>
+<li>Deep Learning, 1st edition, Ian Goodfellow and Yoshua Bengio and Aaron Courville. <a href="https://www.amazon.com/Deep-Learning-Adaptive-Computation-Machine/dp/0262035618/ref=sr_1_1?ie=UTF8&qid=1472485235&sr=8-1&keywords=deep+learning+book">Official version</a>, <a href="https://www.deeplearningbook.org/">online version</a></li>
 <li>Artificial Intelligence: A Modern Approach, 3rd edition, Stuart Russell and Peter Norvig. <a href="https://www.amazon.com/Artificial-Intelligence-Modern-Approach-3rd/dp/0136042597">Official version</a></li>
 <li>Find latest advancements at NLP/AI conferences/journals: ACL, EMNLP, NAACL, TACL, NeurIPS, ICML, ICLR, AAAI</li>
 </ul>
