--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -20,7 +20,7 @@
 
 <h3 property="dc:title" datatype="" style="color: #990000"><strong>Description</strong></h3>
 <p><span style="font-size: medium"><span style="text-align: justify">
-Paper-driven discussion of cutting-edge topics in natural language processing with a focus on pre-trained language models (BERT*, GPT-3, probing), language interfaces (dialogue systems, semantic parsing, question answering, and robot instruction following), and knowledge bases (construction and reasoning). 
+Paper-driven discussion of cutting-edge topics in natural language processing with a focus on pre-trained language models (BERT*, GPT-3, probing), language interfaces (dialogue systems, semantic parsing, question answering, and robot instruction following), and knowledge bases (construction and reasoning), and more. 
 </span></span></p>
 	
 <div>
