--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -11,7 +11,7 @@
 
   				
 <div>
-<h1><strong>CSE 5539: Cutting-Edge Topics in Natural Language Processing (AU20, Wed/Fri 10:00-11:50am, Zoom)</strong></h1>
+<h1><strong>CSE 5539: Cutting-Edge Topics in Natural Language Processing (AU20, Wed 10:00-11:50am, Zoom)</strong></h1>
 <p><span style="font-size: medium"><span style="text-align: justify"><strong>Instructor</strong>: <a href=http://ysu1989.github.io/>Yu Su</a> </span></span></p>
 <p><span style="font-size: medium"><span style="text-align: justify"><strong>Level and credits</strong>: U/G, 2</span></span></p>
 <p><span style="font-size: medium"><span style="text-align: justify"><strong>Prerequisites</strong>: CSE 3521/5521/5243/5525 highly recommended; requires solid understanding of machine/deep learning and natural language processing for meaningful participation</span></span></p>
