--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -44,6 +44,10 @@ No required textbook. Recommended books for reading:
 </ul>
 </div>
 
+<div style="font-size: medium">
+<h3 property="dc:title" datatype="" style="color: #990000"><strong>Health and Safety Statement</strong></h3>
+<p>See <a href="./health_and_safety_statement.pdf">here</a>.</p>
+</div>
 
 <div style="font-size: medium">
 <h3 property="dc:title" datatype="" style="color: #990000"><strong>Academic Integrity Policy</strong></h3>
