--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -90,7 +90,11 @@ table, th, td {
   <tr>
     <td>2</td>
     <td>09/02</td>
-    <td>Pre-trained language models</td> 
+    <td>
+      - Course project [<a href="02project.pdf">slides</a>]<br>
+      - Attention is All You Need [<a href="https://papers.nips.cc/paper/7181-attention-is-all-you-need.pdf">paper</a>] [<a href="Transformer.pdf">slides</a>] <br>
+      - BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding [<a href="https://arxiv.org/abs/1810.04805">paper</a>] [<a href="BERT.pdf">slides</a>]
+    </td> 
     <td></td>
     <td></td>
     <td></td>
@@ -98,7 +102,10 @@ table, th, td {
   <tr>
     <td>3</td>
     <td>09/09</td>
-    <td>Pre-trained language models</td> 
+    <td>
+      - DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter [<a href="https://www.aclweb.org/anthology/2020.acl-main.703/">paper</a>] [<a href="#">slides</a>] <br>
+      - BART: Denoising Sequence-to-Sequence Pre-training for Natural Language Generation, Translation, and Comprehension [<a href="https://www.aclweb.org/anthology/2020.acl-main.703/">paper</a>] [<a href="#">slides</a>]
+    </td> 
     <td></td>
     <td></td>
     <td></td>
@@ -107,7 +114,10 @@ table, th, td {
   <tr>
     <td>4</td>
     <td>09/16</td>
-    <td>Pre-trained language models</td> 
+    <td>
+      - Longformer: The Long-Document Transformer [<a href="https://arxiv.org/abs/2004.05150">paper</a>] [<a href="#">slides</a>] <br>
+      - Big Bird: Transformers for Longer Sequences [<a href="https://arxiv.org/pdf/2007.14062.pdf">paper</a>] [<a href="#">slides</a>]
+    </td> 
     <td></td>
     <td></td>
     <td></td>
@@ -115,7 +125,9 @@ table, th, td {
   <tr>
     <td>5</td>
     <td>09/23</td>
-    <td>Pre-trained language models</td>
+    <td>
+      - Language Models are Few-Shot Learners [<a href="https://arxiv.org/abs/2005.14165">paper</a>] [<a href="#">slides</a>]
+    </td>
     <td></td>
     <td></td>
     <td></td>
