--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -103,7 +103,7 @@ table, th, td {
     <td>3</td>
     <td>09/09</td>
     <td>
-      - DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter [<a href="https://www.aclweb.org/anthology/2020.acl-main.703/">paper</a>] [<a href="#">slides</a>] <br>
+      - DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter [<a href="https://arxiv.org/abs/1910.01108">paper</a>] [<a href="#">slides</a>] <br>
       - BART: Denoising Sequence-to-Sequence Pre-training for Natural Language Generation, Translation, and Comprehension [<a href="https://www.aclweb.org/anthology/2020.acl-main.703/">paper</a>] [<a href="#">slides</a>]
     </td> 
     <td></td>
