--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
-            <li>05/2020: Serve as Area Chair (Conversational Bot/QA) at NLPCC'20. Serve in the Program Committee of ACL'20, KDD'20, EMNLP'20, AKBC'20.</li>
+            <li>05/2020: Serve as Area Chair (Conversational Bot/QA) at NLPCC'20. Serve in the Program Committee of ACL'20, KDD'20 (chair of Trustworthy Data Mining session), EMNLP'20, AKBC'20, IntEx-SemPar'20.</li>
             <li>04/2020: Long paper on logical natural language generation accepted to ACL 2020</li>
             <li>03/2020: Thank you, Fujitsu Laboratories of America, for supporting our research!</li>
             <li>01/2020: Started as Assistant Professor of Computer Science and Engineering at the Ohio State University</li>
