--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>09/2020: Two long papers (learning language interfaces from use and data-to-text generation) accepted to EMNLP'20. One short paper on document classification for COVID-19 literature accepted to Findings of EMNLP.</li>
             <li>05/2020: Serve as Area Chair (Conversational Bot/QA) at NLPCC'20. Serve in the Program Committee of ACL'20, KDD'20 (chair of Trustworthy Data Mining session), EMNLP'20, AKBC'20, IntEx-SemPar'20.</li>
             <li>04/2020: Long paper on logical natural language generation accepted to ACL 2020</li>
             <li>03/2020: Thank you, Fujitsu Laboratories of America, for supporting our research!</li>
@@ -125,28 +126,34 @@
         <div class="publication">
 	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>) (<a href="https://www.semanticscholar.org/author/Yu-Su/1758652">Semantic Scholar</a>)</div>	
 
-            <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
+            <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
             <ul>
-              <li>
-                <span class="paperTitle">An Imitation Game for Learning Semantic Parsers from User Interaction</span> <br />
-                <span class="paperAuthor">Ziyu Yao, Yiqi Tang, Wen-tau Yih, Huan Sun, and Yu Su. <i>arXiv preprint arXiv:2005.00689</i></span>
-		<span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>]</span>
-              </li>
-              <li>
-                <span class="paperTitle">Document Classification for COVID-19 Literature</span> <br />
-                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Juncheng Zeng, Dongdong Zhang, Ping Zhang, and Yu Su. <i>arXiv preprint arXiv:2006.13816. Presented at the <a href="https://www.nlpcovid19workshop.org/">NLP-COVID Workshop</a> at ACL'20</i>,</span>
-		<span class="paperResource"> [<a href="https://arxiv.org/abs/2006.13816">paper</a>]</span>
-              </li>
-	    </ul>
+              
+	    </ul> -->
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
-              <li>
+                <li>
+                <span class="paperTitle">An Imitation Game for Learning Semantic Parsers from User Interaction</span> <br />
+                <span class="paperAuthor">Ziyu Yao, Yiqi Tang, Wen-tau Yih, Huan Sun, and Yu Su. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>] [<a href="#">code (coming soon)</a>]</span>
+                </li>
+                <li>
+                <span class="paperTitle">KGLM: Pretrained Knowledge-Grounded Language Model for Data-to-Text Generation</span> <br />
+                <span class="paperAuthor">Wenhu Chen, Yu Su, Xifeng Yan and William Yang Wang. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
+                <span class="paperResource"> [<a href="#">paper (coming soon)</a>] [<a href="#">code (coming soon)</a>]</span>
+                </li>
+                <li>
+                <span class="paperTitle">Document Classification for COVID-19 Literature</span> <br />
+                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Juncheng Zeng, Dongdong Zhang, Ping Zhang, and Yu Su. <b>Findings of EMNLP'20</b>, short paper. Also presented at the <a href="https://www.nlpcovid19workshop.org/">NLP-COVID Workshop</a> at <b>ACL'20</b></i></span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2006.13816">paper</a>]</span>
+                </li>
+                <li>
                 <span class="paperTitle">Logical Natural Language Generation from Open-Domain Tables</span> <br />
-                <span class="paperAuthor">Wenhu Chen, Jianshu Chen, Yu Su, Zhiyu Chen and William Yang Wang. To appear in the Annual Conference of the Association for Computational Linguistics, 2020 (<b>ACL’20</b>)</span>
+                <span class="paperAuthor">Wenhu Chen, Jianshu Chen, Yu Su, Zhiyu Chen and William Yang Wang. In Proc. of the Annual Conference of the Association for Computational Linguistics, 2020 (<b>ACL’20</b>)</span>
 		<span class="paperResource"> [<a href="https://arxiv.org/abs/2004.10404">paper</a>][<a href="https://github.com/wenhuchen/LogicNLG">code and data</a>]</span>
                 </li>
-              <li>
+                <li>
 		<span class="paperTitle">Model-based Interactive Semantic Parsing: A Unified Formulation and A Text-to-SQL Case Study</span> <br />
 		<span class="paperAuthor">Ziyu Yao, Yu Su, Huan Sun, Scott Wen-tau Yih. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2019 (<b>EMNLP’19</b>)</span>
 		<span class="paperResource"> [<a href="https://arxiv.org/abs/1910.05389">paper</a>][<a href="https://github.com/sunlab-osu/MISP">code</a>]</span>
