--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>09/2020: Super excited to share some of the work I've been working on at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a> &#8212; <a href="https://www.microsoft.com/en-us/research/blog/dialogue-as-dataflow-a-new-approach-to-conversational-ai/?OCID=msr_blog_semantic_tw">Task-Oriented Dialogue as Dataflow Synthesis</a> (TACL'20)</li>
             <li>09/2020: Two long papers (learning language interfaces from use and data-to-text generation) accepted to EMNLP'20. One short paper on document classification for COVID-19 literature accepted to Findings of EMNLP.</li>
             <li>05/2020: Serve as Area Chair (Conversational Bot/QA) at NLPCC'20. Serve in the Program Committee of ACL'20, KDD'20 (chair of Trustworthy Data Mining session), EMNLP'20, AKBC'20, IntEx-SemPar'20.</li>
             <li>04/2020: Long paper on logical natural language generation accepted to ACL 2020</li>
@@ -134,6 +135,11 @@
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
                 <li>
+                <span class="paperTitle">Task-Oriented Dialogue as Dataflow Synthesis</span> <br />
+                <span class="paperAuthor">Semantic Machines, Jacob Andreas, John Bufe, David Burkett, Charles Chen, Josh Clausman, Jean Crawford, Kate Crim, Jordan DeLoach, Leah Dorner, Jason Eisner, Hao Fang, Alan Guo, David Hall, Kristin Hayes, Kellie Hill, Diana Ho, Wendy Iwaszuk, Smriti Jha, Dan Klein, Jayant Krishnamurthy, Theo Lanman, Percy Liang, Christopher H. Lin, Ilya Lintsbakh, Andy McGovern, Aleksandr Nisnevich, Adam Pauls, Dmitrij Petters, Brent Read, Dan Roth, Subhro Roy, Jesse Rusak, Beth Short, Div Slomin, Ben Snyder, Stephon Striplin, Yu Su, Zachary Tellman, Sam Thomson, Andrei Vorobev, Izabela Witoszko, Jason Wolfe, Abby Wray, Yuchen Zhang and Alexander Zotov. Transactions of the Association for Computational Linguistics, 2020 (<b>TACL’20</b>)</span>
+                <span class="paperResource"> [<a href="https://www.microsoft.com/en-us/research/blog/dialogue-as-dataflow-a-new-approach-to-conversational-ai/?OCID=msr_blog_semantic_tw">blog</a>][<a href="https://www.mitpressjournals.org/doi/10.1162/tacl_a_00333">paper</a>] [<a href="https://github.com/microsoft/task_oriented_dialogue_as_dataflow_synthesis">code</a>] [<a href="https://microsoft.github.io/task_oriented_dialogue_as_dataflow_synthesis/">data and leaderboard</a>]</span>
+                </li>
+                <li>
                 <span class="paperTitle">An Imitation Game for Learning Semantic Parsers from User Interaction</span> <br />
                 <span class="paperAuthor">Ziyu Yao, Yiqi Tang, Wen-tau Yih, Huan Sun, and Yu Su. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>] [<a href="#">code (coming soon)</a>]</span>
@@ -145,7 +151,7 @@
                 </li>
                 <li>
                 <span class="paperTitle">Document Classification for COVID-19 Literature</span> <br />
-                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Juncheng Zeng, Dongdong Zhang, Ping Zhang, and Yu Su. <b>Findings of EMNLP'20</b>, short paper. Also presented at the <a href="https://www.nlpcovid19workshop.org/">NLP-COVID Workshop</a> at <b>ACL'20</b></i></span>
+                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Juncheng Zeng, Dongdong Zhang, Ping Zhang, and Yu Su. <b>Findings of EMNLP'20</b>, short paper. Presented at <a href="https://www.nlpcovid19workshop.org/">NLP-COVID</a> workshop at <b>ACL'20</b></i></span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2006.13816">paper</a>]</span>
                 </li>
                 <li>
