--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <div class="divider"></div>
         <ul>
             <li>01/2020 - present: Assistant professor at <i>The Ohio State University</i></li>
-	    <li>10/2018 - 12/2019: Senior researcher at <i>Microsoft Semantic Machines</i></li>
+	    <li>10/2018 - present: Senior researcher at <i>Microsoft Semantic Machines</i></li>
 	    <li>08/2018 - 07/2019: Visiting assistant professor at <i>The Ohio State University</i></li>
 	    <li>06/2017 - 09/2017: Research intern at <i>Microsoft Research, Redmond</i></li>
             <li>06/2016 - 09/2016: Research intern at <i>Microsoft Research, Redmond</i></li>
