--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Service</h2>
         <div class="divider"></div>
         <ul>
-	    <li><b>Organizer/Co-chair</b>: NAACL'21 (Faculty Advisor to Student Research Workshop), <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20), NLPCC'20 Area Chair (Conversational Bot/QA Track), KBCOM'18 (co-located with WSDM'18)</li>
+	    <li><b>Organizer/Co-chair</b>: <a href="https://2021.naacl.org/">NAACL'21</a> (Faculty Advisor to Student Research Workshop), <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20), NLPCC'20 Area Chair (Conversational Bot/QA Track), KBCOM'18 (co-located with WSDM'18)</li>
 	    <li><b>Program Committee Member</b>: KDD'20 (session chair), ACL'20, EMNLP'20, AKBC'20, KDD'19, NAACL'19, AAAI'19, AKBC'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17</li>
             <li><b>Reviewer</b>: IEEE TNNLS, IEEE TKDE </li>
         </ul>
