--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -115,8 +115,8 @@ table, th, td {
     <td>4</td>
     <td>09/16</td>
     <td>
-      - Longformer: The Long-Document Transformer [<a href="https://arxiv.org/abs/2004.05150">paper</a>] [<a href="#">slides</a>] <br>
-      - Big Bird: Transformers for Longer Sequences [<a href="https://arxiv.org/pdf/2007.14062.pdf">paper</a>] [<a href="#">slides</a>]
+      - Longformer: The Long-Document Transformer [<a href="https://arxiv.org/abs/2004.05150">paper</a>] [<a href="Longformer.pdf">slides</a>] <br>
+      - Big Bird: Transformers for Longer Sequences [<a href="https://arxiv.org/pdf/2007.14062.pdf">paper</a>] [<a href="BigBird.pdf">slides</a>]
     </td> 
     <td></td>
     <td></td>
@@ -126,7 +126,7 @@ table, th, td {
     <td>5</td>
     <td>09/23</td>
     <td>
-      - Language Models are Few-Shot Learners [<a href="https://arxiv.org/abs/2005.14165">paper</a>] [<a href="#">slides</a>]
+      - Language Models are Few-Shot Learners [<a href="https://arxiv.org/abs/2005.14165">paper</a>] [<a href="GPT-3.pdf">slides</a>]
     </td>
     <td></td>
     <td></td>
