--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
                 <li>
                 <span class="paperTitle">An Imitation Game for Learning Semantic Parsers from User Interaction</span> <br />
                 <span class="paperAuthor">Ziyu Yao, Yiqi Tang, Wen-tau Yih, Huan Sun, and Yu Su. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
-                <span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>] [<a href="#">code (coming soon)</a>]</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>] [<a href="https://github.com/sunlab-osu/MISP">code</a>]</span>
                 </li>
                 <li>
-                <span class="paperTitle">KGLM: Pretrained Knowledge-Grounded Language Model for Data-to-Text Generation</span> <br />
+                <span class="paperTitle">KGPT: Knowledge-Grounded Pre-Training for Data-to-Text Generation</span> <br />
                 <span class="paperAuthor">Wenhu Chen, Yu Su, Xifeng Yan and William Yang Wang. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
-                <span class="paperResource"> [<a href="#">paper (coming soon)</a>] [<a href="#">code (coming soon)</a>]</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2010.02307">paper</a>] [<a href="https://github.com/wenhuchen/KGPT">code</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Document Classification for COVID-19 Literature</span> <br />
