--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -143,7 +143,10 @@ table, th, td {
   <tr>
     <td>7</td>
     <td>10/07</td>
-    <td>Language interfaces: dialogue systems and semantic parsing</td>
+    <td>
+      - Experience Grounds Language [<a href="https://arxiv.org/abs/2004.10151">paper</a>] [<a href="Experience Grounds Language.pdf">slides</a>] <br>
+      - Deploying Lifelong Open-Domain Dialogue Learning [<a href="https://arxiv.org/abs/2008.08076">paper</a>] [<a href="lifelong_dialogue.pdf">slides</a>]
+    </td>
     <td></td>
     <td></td>
     <td></td>
@@ -151,7 +154,10 @@ table, th, td {
   <tr>
     <td>8</td>
     <td>10/14</td>
-    <td>Language interfaces: dialogue systems and semantic parsing</td>
+    <td>
+      - Task-Oriented Dialogue as Dataflow Synthesis [<a href="https://www.mitpressjournals.org/doi/10.1162/tacl_a_00333">paper</a>] [<a href="#">slides</a>] <br>
+      - Conversational Semantic Parsing [<a href="https://arxiv.org/abs/2009.13655">paper</a>] [<a href="#">slides</a>]
+    </td>
     <td></td>
     <td></td>
     <td></td>
@@ -159,7 +165,10 @@ table, th, td {
   <tr>
     <td>9</td>
     <td>10/21</td>
-    <td>Language interfaces: dialogue systems and semantic parsing</td>
+    <td>
+      - ALFRED: A Benchmark for Interpreting Grounded Instructions for Everyday Tasks [<a href="https://arxiv.org/pdf/1912.01734.pdf">paper</a>] [<a href="ALFRED.pdf">slides</a>] <br>
+      - RAT-SQL: Relation-Aware Schema Encoding and Linking for Text-to-SQL Parsers [<a href="https://arxiv.org/abs/1911.04942">paper</a>] [<a href="RAT-SQL.pdf">slides</a>]
+    </td>
     <td></td>
     <td></td>
     <td></td>
@@ -167,7 +176,10 @@ table, th, td {
   <tr>
     <td>10</td>
     <td>10/28</td>
-    <td>Knowledge bases: construction and reasoning</td>
+    <td>
+      - AutoKnow: Self-Driving Knowledge Collection for Products of Thousands of Types [<a href="https://arxiv.org/pdf/2006.13473.pdf">paper</a>] [<a href="#">slides</a>] <br>
+      - Neural Rule Grounding for Label-Efficient Relation Extraction [<a href="https://arxiv.org/abs/1909.02177">paper</a>] [<a href="#">slides</a>]
+    </td>
     <td></td>
     <td></td>
     <td></td>
@@ -175,7 +187,10 @@ table, th, td {
   <tr>
     <td>11</td>
     <td>11/04</td>
-    <td>Knowledge bases: construction and reasoning</td>
+    <td>
+      - Embedding Logical Queries on Knowledge Graphs [<a href="https://arxiv.org/pdf/1806.01445.pdf">paper</a>] [<a href="#">slides</a>] <br>
+      - Query2Box: Reasoning over Knowledge Graphs in Vector Space Using Box Embeddings [<a href="https://cs.stanford.edu/people/jure/pubs/query2box-iclr20.pdf">paper</a>] [<a href="#">slides</a>]
+    </td>
     <td></td>
     <td></td>
     <td></td>
@@ -191,7 +206,10 @@ table, th, td {
   <tr>
     <td>13</td>
     <td>11/18</td>
-    <td>Knowledge bases: construction and reasoning</td>
+    <td>
+      - Language Models as Knowledge Bases: On Entity Representations, Storage Capacity, and Paraphrased Queries [<a href="https://arxiv.org/abs/2008.09036">paper</a>] [<a href="#">slides</a>] <br>
+      - TeMP: Temporal Message Passing for Temporal Knowledge Graph Completion [<a href="https://arxiv.org/abs/2010.03526">paper</a>] [<a href="#">slides</a>]
+    </td>
     <td></td>
     <td></td>
     <td></td>
