--- a/courses/au20/cse5539/index.html
+++ b/courses/au20/cse5539/index.html
@@ -155,8 +155,8 @@ table, th, td {
     <td>8</td>
     <td>10/14</td>
     <td>
-      - Task-Oriented Dialogue as Dataflow Synthesis [<a href="https://www.mitpressjournals.org/doi/10.1162/tacl_a_00333">paper</a>] [<a href="#">slides</a>] <br>
-      - Conversational Semantic Parsing [<a href="https://arxiv.org/abs/2009.13655">paper</a>] [<a href="#">slides</a>]
+      - Task-Oriented Dialogue as Dataflow Synthesis [<a href="https://www.mitpressjournals.org/doi/10.1162/tacl_a_00333">paper</a>] [<a href="dialogue_as_dataflow.pdf">slides</a>] <br>
+      - Conversational Semantic Parsing [<a href="https://arxiv.org/abs/2009.13655">paper</a>] [<a href="Conversational_Semantic_Parsing.pdf">slides</a>]
     </td>
     <td></td>
     <td></td>
@@ -177,8 +177,8 @@ table, th, td {
     <td>10</td>
     <td>10/28</td>
     <td>
-      - AutoKnow: Self-Driving Knowledge Collection for Products of Thousands of Types [<a href="https://arxiv.org/pdf/2006.13473.pdf">paper</a>] [<a href="#">slides</a>] <br>
-      - Neural Rule Grounding for Label-Efficient Relation Extraction [<a href="https://arxiv.org/abs/1909.02177">paper</a>] [<a href="#">slides</a>]
+      - AutoKnow: Self-Driving Knowledge Collection for Products of Thousands of Types [<a href="https://arxiv.org/pdf/2006.13473.pdf">paper</a>] [<a href="autoknow.pdf">slides</a>] <br>
+      - Neural Rule Grounding for Label-Efficient Relation Extraction [<a href="https://arxiv.org/abs/1909.02177">paper</a>] [<a href="NERO.pdf">slides</a>]
     </td>
     <td></td>
     <td></td>
