--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>11/2020: Will co-organize the <a href="https://nlp4prog.github.io/2021/">First Workshop on Natural Language Processing for Programming</a> at ACL-IJCNLP 2021. </li>
             <li>09/2020: Will serve on the organizing committee of NAACL 2021 as Faculty Advisor to Student Research Workshop.</li>
             <li>09/2020: Super excited to share some of the work I've been working on at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a> &#8212; <a href="https://www.microsoft.com/en-us/research/blog/dialogue-as-dataflow-a-new-approach-to-conversational-ai/?OCID=msr_blog_semantic_tw">Task-Oriented Dialogue as Dataflow Synthesis</a> (TACL'20)</li>
             <li>09/2020: Two long papers (learning language interfaces from use and data-to-text generation) accepted to EMNLP'20. One short paper on document classification for COVID-19 literature accepted to Findings of EMNLP.</li>
-            <li>05/2020: Serve as Area Chair (Conversational Bot/QA) at NLPCC'20. Serve in the Program Committee of ACL'20, KDD'20 (chair of Trustworthy Data Mining session), EMNLP'20, AKBC'20, IntEx-SemPar'20.</li>
+            <li>05/2020: Serve as Area Chair (Conversational Bot/QA) at NLPCC'20. Serve in the Program Committee of ACL'20, KDD'20 (chair of Trustworthy Data Mining session), EMNLP'20, AAAI'21, AKBC'20, IntEx-SemPar'20.</li>
             <li>04/2020: Long paper on logical natural language generation accepted to ACL 2020</li>
             <li>03/2020: Thank you, Fujitsu Laboratories of America, for supporting our research!</li>
             <li>01/2020: Started as Assistant Professor of Computer Science and Engineering at the Ohio State University</li>
@@ -339,8 +340,8 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Service</h2>
         <div class="divider"></div>
         <ul>
-	    <li><b>Organizer/Co-chair</b>: <a href="https://2021.naacl.org/">NAACL'21</a> (Faculty Advisor to Student Research Workshop), <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20), NLPCC'20 Area Chair (Conversational Bot/QA Track), KBCOM'18 (co-located with WSDM'18)</li>
-	    <li><b>Program Committee Member</b>: KDD'20 (session chair), ACL'20, EMNLP'20, AKBC'20, KDD'19 (session chair), NAACL'19, AAAI'19, AKBC'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17 (session chair)</li>
+	    <li><b>Organizer/Co-chair</b>: <a href="https://2021.naacl.org/">NAACL'21</a> (Faculty Advisor to Student Research Workshop), <a href="https://nlp4prog.github.io/2021/">NLP4Prog'21</a>, <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20), NLPCC'20 Area Chair (Conversational Bot/QA Track), KBCOM'18 (co-located with WSDM'18)</li>
+	    <li><b>Program Committee Member</b>: AAAI'21, KDD'20 (session chair), ACL'20, EMNLP'20, AKBC'20, KDD'19 (session chair), NAACL'19, AAAI'19, AKBC'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17 (session chair)</li>
             <li><b>Reviewer</b>: IEEE TNNLS, IEEE TKDE </li>
         </ul>
     </div>
