--- a/index.html
+++ b/index.html
@@ -334,6 +334,20 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         </ul>
     </div>
 
+    <div class="contentBlock">
+        <a name="student"></a>
+          <h2>Students</h2>
+          <div class="divider"></div>
+          <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Current Ph.D. Students</b></p> -->
+          <ul>
+              <li><a href="https://entslscheia.github.io/">Yu Gu</a></li>
+              <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a></li>
+              <li><a href="https://dblp.org/pid/264/4620.html">Bernal Jiménez Gutiérrez</a></li>
+              <li><a href="https://scholar.google.com/citations?user=6uzf-3kAAAAJ&hl=en">Piyush Chawla</a> (Co-advised with Han-Wei Shen)</li>
+              <li><a href="https://chanh.ee/">Chan Hee Song</a></li>
+          </ul>
+      </div>
+
 
     <div class="contentBlock">
       <a name="service"></a>
